// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Heading Default 1`] = `
<span>
  I am a Very Large Heading
</span>
`;

exports[`Storyshots Text Default 1`] = `
<span>
  Some text
</span>
`;
